--- a/UI/ColorVision.UI/Plugins/ViewDllVersionsWindow.xaml
+++ b/UI/ColorVision.UI/Plugins/ViewDllVersionsWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="ColorVision.Plugins.ViewDllVersionsWindow"
+﻿<Window x:Class="ColorVision.UI.Plugins.ViewDllVersionsWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Plugins"
+        xmlns:local="clr-namespace:ColorVision.UI.Plugins"
         mc:Ignorable="d"
         Title="ViewDllVersionsWindow" Height="450" Width="800" Initialized="Window_Initialized">
     <Grid>
