--- a/UI/ColorVision.UI/Plugins/PluginManagerWindow.xaml
+++ b/UI/ColorVision.UI/Plugins/PluginManagerWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="ColorVision.Plugins.PluginManagerWindow"
+﻿<Window x:Class="ColorVision.UI.Plugins.PluginManagerWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Plugins"
-        xmlns:properties="clr-namespace:ColorVision.Properties"
+        xmlns:local="clr-namespace:ColorVision.UI.Plugins"
+        xmlns:properties="clr-namespace:ColorVision.UI.Properties"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
-        d:DataContext="{d:DesignInstance local:PluginManager}"
+        d:DataContext="{d:DesignInstance local:PluginManagerV}"
         xmlns:pl="clr-namespace:ColorVision.UI;assembly=ColorVision.UI"
         xmlns:wv2="clr-namespace:Microsoft.Web.WebView2.Wpf;assembly=Microsoft.Web.WebView2.Wpf" xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
         mc:Ignorable="d"
