--- a/ColorVision/StartWindow.xaml
+++ b/ColorVision/StartWindow.xaml
@@ -16,9 +16,9 @@
 
         <Border  Grid.Row="1" CornerRadius="10,10,0,0" Background="#2D333A">
             <Grid>
-                <StackPanel Margin="10" VerticalAlignment="Center">
-                    <TextBlock Text="ColorVision" HorizontalAlignment="Left" Foreground="White"  VerticalAlignment="Center"  FontSize="24"/>
-                    <TextBlock x:Name="labelVersion" Text="1.0.1.13" HorizontalAlignment="Left" Foreground="White"  FontSize="15" />
+                <StackPanel Margin="15,10" VerticalAlignment="Center">
+                    <TextBlock Text="ColorVision" HorizontalAlignment="Left" Foreground="White"  VerticalAlignment="Center"  FontSize="25" Margin="0,0,0,5"/>
+                    <TextBlock x:Name="labelVersion" Text="1.0.1.13" HorizontalAlignment="Left" Foreground="White"  FontSize="12" />
                 </StackPanel>
                 <Image Source="/Assets/Image/ColorVision1.ico" Margin="14" HorizontalAlignment="Right" Opacity="0.9"/>
             </Grid>
