--- a/UI/ColorVision.Solution/Rbac/RegisterWindow.xaml
+++ b/UI/ColorVision.Solution/Rbac/RegisterWindow.xaml
@@ -1,12 +1,38 @@
-﻿<Window x:Class="ColorVision.Solution.Rbac.RegisterWindow"
+﻿<Window x:Class="ColorVision.Rbac.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.Solution.Rbac"
         mc:Ignorable="d"
-        Title="注册新用户" Height="400" Width="600" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized">
-    <Grid>
+        Title="注册新用户" Height="300" Width="420"
+        Background="{DynamicResource GlobalBackground}" WindowStartupLocation="CenterOwner" ResizeMode="NoResize">
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="90"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
 
+        <TextBlock Text="用户名:" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" Margin="0,5"/>
+        <TextBox x:Name="TxtUsername" Grid.Row="0" Grid.Column="1" Margin="0,5" Width="220"/>
+
+        <TextBlock Text="密码:" Grid.Row="1" Grid.Column="0" VerticalAlignment="Center" Margin="0,5"/>
+        <PasswordBox x:Name="Pwd1" Grid.Row="1" Grid.Column="1" Margin="0,5" Width="220"/>
+
+        <TextBlock Text="确认密码:" Grid.Row="2" Grid.Column="0" VerticalAlignment="Center" Margin="0,5"/>
+        <PasswordBox x:Name="Pwd2" Grid.Row="2" Grid.Column="1" Margin="0,5" Width="220"/>
+
+        <TextBlock x:Name="TxtStatus" Grid.Row="3" Grid.Column="0" Grid.ColumnSpan="2" Foreground="OrangeRed" TextWrapping="Wrap" Margin="0,10,0,0"/>
+
+        <StackPanel Grid.Row="4" Grid.ColumnSpan="2" Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,15,0,0">
+            <Button x:Name="BtnRegister" Content="注册" Width="110" Margin="10,0" Click="BtnRegister_Click"/>
+            <Button Content="取消" Width="110" Margin="10,0" Click="BtnCancel_Click"/>
+        </StackPanel>
     </Grid>
 </Window>
