--- a/UI/ColorVision.ImageEditor/ImageView.xaml
+++ b/UI/ColorVision.ImageEditor/ImageView.xaml
@@ -104,8 +104,11 @@
                             <ToggleButton IsChecked="{Binding PolygonManager.IsShow}"  Padding="5" Margin="0,0,2,0"  >
                                 <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagePolygon}" />
                             </ToggleButton>
-                            <ToggleButton IsChecked="{Binding LineManager.IsShow}" Content="直线"  Padding="5" Margin="0,0,2,0"  >
+                            <ToggleButton IsChecked="{Binding LineManager.IsShow}" Content="L" Width="30"  Padding="5" Margin="0,0,2,0"  >
                             </ToggleButton>
+                            <ToggleButton IsChecked="{Binding TextManager.IsShow}" Content="T" Width="30" Padding="5" Margin="0,0,2,0"  >
+                            </ToggleButton>
+                            
                             <ToggleButton IsChecked="{Binding BezierCurveManager.IsShow}" Padding="5" Margin="0,0,2,0">
                                 <Image Style="{StaticResource ToolBarImage}" Source="{DynamicResource DrawingImagePolygon}" />
                             </ToggleButton>
