--- a/Projects/ProjectARVRPro/ARVRWindow.xaml
+++ b/Projects/ProjectARVRPro/ARVRWindow.xaml
@@ -9,7 +9,7 @@
         xmlns:hc="https://handyorg.github.io/handycontrol"
         xmlns:LogImp="clr-namespace:ColorVision.UI.LogImp;assembly=ColorVision.UI"
         mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance local:ProjectARVRLiteConfig}"
+        d:DataContext="{d:DesignInstance local:ProjectARVRProConfig}"
         Title="ARVR检测" Height="720" Width="1280" Background="{DynamicResource GlobalBackground}" Initialized="Window_Initialized" >
     <Window.Resources>
         <local:ConnectConverter x:Key="ConnectConverter"/>
