--- a/Projects/ProjectARVRPro/ARVRWindow.xaml
+++ b/Projects/ProjectARVRPro/ARVRWindow.xaml
@@ -221,7 +221,7 @@
                         <RowDefinition Height="Auto"/>
                     </Grid.RowDefinitions>
                     <Border Grid.Row="0" BorderBrush="{DynamicResource BorderBrush}" BorderThickness="1" CornerRadius="5" Margin="5,0,5,5">
-                        <hc:StepBar Grid.Row="0" StepIndex="{Binding StepIndex}" Margin="-5,3,0,2">
+                        <hc:StepBar x:Name="stepBar" Grid.Row="0" StepIndex="{Binding StepIndex}" Margin="-5,3,0,2">
                             <hc:StepBarItem Content="初始化"/>
                             <hc:StepBarItem Content="W51"/>
                             <hc:StepBarItem Content="W255"/>
