--- a/Projects/ProjectARVRPro/ProcessManagerWindow.xaml
+++ b/Projects/ProjectARVRPro/ProcessManagerWindow.xaml
@@ -5,8 +5,67 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProjectARVRPro"
         mc:Ignorable="d"
-        Title="ProcessManagerWindow" Height="450" Width="800" Initialized="Window_Initialized">
-    <Grid>
-        
+        d:DataContext="{d:DesignInstance local:ProcessManager}"
+        Title="流程处理配置" Height="450" Width="820" Initialized="Window_Initialized">
+    <Window.Resources>
+        <local:TypeNameConverter x:Key="TypeNameConverter"/>
+    </Window.Resources>
+    <Grid Margin="8">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+
+        <GroupBox Header="创建 ProcessMeta" Padding="8" Margin="0 0 0 8" Grid.Row="0">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="160"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="180"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+
+                <TextBlock Text="名称:" VerticalAlignment="Center" Margin="0 0 4 0"/>
+                <TextBox Grid.Column="1" Text="{Binding NewMetaName, UpdateSourceTrigger=PropertyChanged}"/>
+
+                <TextBlock Grid.Column="2" Text="流程模板:" VerticalAlignment="Center" Margin="12 0 4 0"/>
+                <ComboBox Grid.Column="3" ItemsSource="{Binding templateModels}" DisplayMemberPath="Key" SelectedItem="{Binding SelectedTemplate}"/>
+
+                <TextBlock Grid.Column="4" Text="处理类:" VerticalAlignment="Center" Margin="12 0 4 0"/>
+                <ComboBox Grid.Column="5" ItemsSource="{Binding Processes}" SelectedItem="{Binding SelectedProcess}">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <TextBlock Text="{Binding Converter={StaticResource TypeNameConverter}}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>
+
+                <Button Grid.Column="6" Content="添加" Margin="12 0 0 0" Padding="12 4" Command="{Binding AddMetaCommand}"/>
+            </Grid>
+        </GroupBox>
+
+        <StackPanel Orientation="Horizontal" Grid.Row="1" Margin="0 0 0 8">
+            <Button Content="删除选中" Padding="12 4" Command="{Binding RemoveMetaCommand}"/>
+            <TextBlock Text="  (双击可重命名, 当前仅内存保存)" VerticalAlignment="Center" Margin="12 0 0 0" Foreground="Gray"/>
+        </StackPanel>
+
+        <Grid Grid.Row="2">
+            <ListView ItemsSource="{Binding ProcessMetas}" SelectedItem="{Binding SelectedProcessMeta}" x:Name="lvMetas">
+                <ListView.View>
+                    <GridView>
+                        <GridViewColumn Header="名称" Width="160" DisplayMemberBinding="{Binding Name}"/>
+                        <GridViewColumn Header="流程模板" Width="180" DisplayMemberBinding="{Binding FlowTemplate}"/>
+                        <GridViewColumn Header="处理类" Width="200" DisplayMemberBinding="{Binding ProcessTypeName}"/>
+                    </GridView>
+                </ListView.View>
+            </ListView>
+        </Grid>
     </Grid>
 </Window>
