--- a/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
+++ b/Engine/ColorVision.Engine/Services/Devices/Camera/DisplayCamera.xaml
@@ -256,7 +256,7 @@
                                 </Grid.ColumnDefinitions>
                                 <StackPanel>
                                     <DockPanel Margin="0,0,0,3">
-                                        <StackPanel DockPanel.Dock="Right" VerticalAlignment="Center"  Visibility="{Binding Config.IsAutoExpose,Converter={StaticResource bool2VisibilityConverter1}}">
+                                        <StackPanel DockPanel.Dock="Right" VerticalAlignment="Center">
                                             <CheckBox Content="ND" Padding="2,0,0,0" IsChecked="{Binding Config.IsAutoExpWithND}" Visibility="{Binding Config.CFW.IsNDPort,Converter={StaticResource bool2VisibilityConverter}}" Margin="0,0,5,0"/>
                                         </StackPanel>
                                         <Grid Width="20" Margin="5,0" DockPanel.Dock="Right" HorizontalAlignment="Left">
