--- a/UI/ColorVision.Solution/Editor/AvalonEditor/AvalonEditControll.xaml
+++ b/UI/ColorVision.Solution/Editor/AvalonEditor/AvalonEditControll.xaml
@@ -1,9 +1,9 @@
-﻿<UserControl x:Class="ColorVision.UI.PropertyEditor.AvalonEditControll"
+﻿<UserControl x:Class="ColorVision.Solution.Editor.AvalonEditor.AvalonEditControll"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:ColorVision.UI.PropertyEditor"
+             xmlns:local="clr-namespace:ColorVision.Solution.Editor.AvalonEditor"
              xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800" Background="{DynamicResource GlobalBackground}"  Initialized="UserControl_Initialized">
