--- a/UI/ColorVision.Solution/Editor/AvalonEditor/AvalonEditWindow.xaml
+++ b/UI/ColorVision.Solution/Editor/AvalonEditor/AvalonEditWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="ColorVision.UI.AvalonEditWindow"
+﻿<Window x:Class="ColorVision.Solution.Editor.AvalonEditor.AvalonEditWindow"
 	xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:avalonEdit="http://icsharpcode.net/sharpdevelop/avalonedit"
