--- a/UI/ColorVision.Solution/Plugins/PluginManagerWindow.xaml
+++ b/UI/ColorVision.Solution/Plugins/PluginManagerWindow.xaml
@@ -3,8 +3,8 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:ColorVision.UI.Plugins"
-        xmlns:properties="clr-namespace:ColorVision.UI.Properties"
+        xmlns:local="clr-namespace:ColorVision.UI.Plugins;assembly=ColorVision.UI"
+        xmlns:properties="clr-namespace:ColorVision.UI.Properties;assembly=ColorVision.UI"
         xmlns:hc ="https://handyorg.github.io/handycontrol"
         d:DataContext="{d:DesignInstance local:PluginManager}"
         xmlns:pl="clr-namespace:ColorVision.UI;assembly=ColorVision.UI"
